--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
 <body>
 <header class="mb-xl-5">
     <div class="text-center mt-xl-5 pt-3">
-    <img src="images/logo_about.jpg" class="mb-5 d-none d-xl-inline">
+    <a href="index.html"><img src="images/logo_about.jpg" class="mb-5 d-none d-xl-inline"></a>
         <div class="container mt-2 mt-xl-5">
             <div class="border-line mb-4 d-none d-xl-block"></div>
             <div class="row mb-xl-2">
@@ -28,9 +28,9 @@
                                         Homepage
                                     </button>
                                     <ul class="dropdown-menu">
-                                        <li><a class="dropdown-item" href="#">Action</a></li>
-                                        <li><a class="dropdown-item" href="#">Another action</a></li>
-                                        <li><a class="dropdown-item" href="#">Something else here</a></li>
+                                        <li><a class="dropdown-item" href="about.html">About</a></li>
+                                        <li><a class="dropdown-item" href="cookies.html">Cookies</a></li>
+                                        <li><a class="dropdown-item" href="recipe.html">Recipe</a></li>
                                     </ul>
                                 </div>
                             </div>
@@ -40,9 +40,9 @@
                                         Recipe Page
                                     </button>
                                     <ul class="dropdown-menu">
-                                        <li><a class="dropdown-item" href="#">Action</a></li>
-                                        <li><a class="dropdown-item" href="#">Another action</a></li>
-                                        <li><a class="dropdown-item" href="#">Something else here</a></li>
+                                        <li><a class="dropdown-item" href="about.html">About</a></li>
+                                        <li><a class="dropdown-item" href="cookies.html">Cookies</a></li>
+                                        <li><a class="dropdown-item" href="recipe.html">Recipe</a></li>
                                     </ul>
                                 </div>
                             </div>
@@ -52,14 +52,14 @@
                                         Pages
                                     </button>
                                     <ul class="dropdown-menu">
-                                        <li><a class="dropdown-item" href="#">Action</a></li>
-                                        <li><a class="dropdown-item" href="#">Another action</a></li>
-                                        <li><a class="dropdown-item" href="#">Something else here</a></li>
+                                        <li><a class="dropdown-item" href="blog.html">Blog</a></li>
+                                        <li><a class="dropdown-item" href="cookies.html">Cookies</a></li>
+                                        <li><a class="dropdown-item" href="recipe.html">Recipee</a></li>
                                     </ul>
                                 </div>
                             </div>
                             <div class="col-12 col-xl-auto text-end mt-2">
-                                <a href="#" class="menu-button text-decoration-none text-black">
+                                <a href="form.html" class="menu-button text-decoration-none text-black">
                                     Buy
                                 </a>
                             </div>
