--- a/blog.html
+++ b/blog.html
@@ -14,9 +14,9 @@
     <div class="container mt-3 mt-xl-5">
         <div class="row">
             <div class="col-2 col-xl order-1">
-                <img src="images/logo.jpg" class="images mt-2">
+                <a href="index.html"><img src="images/logo.jpg" class="images mt-2"></a>
             </div>
-            <div class="col-12 col-xl-auto order-2 order-xl-1">
+            <div class="col-12 col-xl-auto">
                 <div class="collapse d-xl-block" id="topMenu">
                     <div class="row">
                         <div class="col-12 col-xl-auto text-end">
@@ -25,9 +25,9 @@
                                     Homepage
                                 </button>
                                 <ul class="dropdown-menu">
-                                    <li><a class="dropdown-item" href="#">Action</a></li>
-                                    <li><a class="dropdown-item" href="#">Another action</a></li>
-                                    <li><a class="dropdown-item" href="#">Something else here</a></li>
+                                    <li><a class="dropdown-item" href="about.html">About</a></li>
+                                    <li><a class="dropdown-item" href="cookies.html">Cookies</a></li>
+                                    <li><a class="dropdown-item" href="recipe.html">Recipe</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -37,9 +37,9 @@
                                     Recipe Page
                                 </button>
                                 <ul class="dropdown-menu">
-                                    <li><a class="dropdown-item" href="#">Action</a></li>
-                                    <li><a class="dropdown-item" href="#">Another action</a></li>
-                                    <li><a class="dropdown-item" href="#">Something else here</a></li>
+                                    <li><a class="dropdown-item" href="about.html">About</a></li>
+                                    <li><a class="dropdown-item" href="cookies.html">Cookies</a></li>
+                                    <li><a class="dropdown-item" href="recipe.html">Recipe</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -49,14 +49,14 @@
                                     Pages
                                 </button>
                                 <ul class="dropdown-menu">
-                                    <li><a class="dropdown-item" href="#">Action</a></li>
-                                    <li><a class="dropdown-item" href="#">Another action</a></li>
-                                    <li><a class="dropdown-item" href="#">Something else here</a></li>
+                                    <li><a class="dropdown-item" href="blog.html">Blog</a></li>
+                                    <li><a class="dropdown-item" href="cookies.html">Cookies</a></li>
+                                    <li><a class="dropdown-item" href="recipe.html">Recipee</a></li>
                                 </ul>
                             </div>
                         </div>
                         <div class="col-12 col-xl-auto text-end mt-2">
-                            <a href="#" class="menu-button text-decoration-none text-black">
+                            <a href="form.html" class="menu-button text-decoration-none text-black">
                                 Buy
                             </a>
                         </div>
