--- a/recipe.html
+++ b/recipe.html
@@ -33,52 +33,43 @@
         </div>
     </div>
      <div class="text-center mt-xl-5 pt-3">
-    <img src="images/logo_about.jpg" class="mb-5 d-none d-xl-inline">
+    <a href="index.html"><img src="images/logo_about.jpg" class="mb-5 d-none d-xl-inline"></a>
         <div class="container mt-2 mt-xl-5">
             <div class="row mb-xl-2 justify-content-center">
                 <div class="col-12 col-xl-auto">
                     <div class="collapse d-xl-block" id="topMenu">
                         <div class="row">
-                            <div class="col-12 col-xl-auto">
-                                <div class="dropdown">
-                                    <button class="btn dropdown-toggle menu-button" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                        Homepage
-                                    </button>
-                                    <ul class="dropdown-menu">
-                                        <li><a class="dropdown-item" href="#">Action</a></li>
-                                        <li><a class="dropdown-item" href="#">Another action</a></li>
-                                        <li><a class="dropdown-item" href="#">Something else here</a></li>
-                                    </ul>
+                            <div class="col-12 col-xl-auto order-2 order-xl-1">
+                                <div class="collapse d-xl-block" id="topMenu">
+                                    <div class="row">
+                                        <div class="col-12 col-xl-auto text-end">
+                                            <div class="">
+                                                <a href="about.html" class="text-decoration-none"><button class="btn menu-button" type="button" aria-expanded="false">
+                                                    About
+                                                </button></a>
+                                            </div>
+                                        </div>
+                                        <div class="col-12 col-xl-auto text-end">
+                                            <div class="dropdown">
+                                                <a href="cookies.html" class="text-decoration-none"><button class="btn menu-button" type="button" aria-expanded="false">
+                                                    Cookies
+                                                </button></a>
+                                            </div>
+                                        </div>
+                                        <div class="col-12 col-xl-auto text-end">
+                                            <div class="dropdown">
+                                                <a href="recipe.html" class="text-decoration-none"><button class="btn menu-button" type="button" aria-expanded="false">
+                                                    Recipe
+                                                </button></a>
+                                            </div>
+                                        </div>
+                                        <div class="col-12 col-xl-auto text-end mt-2">
+                                            <a href="form.html" class="menu-button text-decoration-none text-black">
+                                                Buy
+                                            </a>
+                                        </div>
+                                    </div>
                                 </div>
-                            </div>
-                            <div class="col-12 col-xl-auto">
-                                <div class="dropdown">
-                                    <button class="btn dropdown-toggle menu-button" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                        Recipe Page
-                                    </button>
-                                    <ul class="dropdown-menu">
-                                        <li><a class="dropdown-item" href="#">Action</a></li>
-                                        <li><a class="dropdown-item" href="#">Another action</a></li>
-                                        <li><a class="dropdown-item" href="#">Something else here</a></li>
-                                    </ul>
-                                </div>
-                            </div>
-                            <div class="col-12 col-xl-auto">
-                                <div class="dropdown">
-                                    <button class="btn dropdown-toggle menu-button" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                        Pages
-                                    </button>
-                                    <ul class="dropdown-menu">
-                                        <li><a class="dropdown-item" href="#">Action</a></li>
-                                        <li><a class="dropdown-item" href="#">Another action</a></li>
-                                        <li><a class="dropdown-item" href="#">Something else here</a></li>
-                                    </ul>
-                                </div>
-                            </div>
-                            <div class="col-12 col-xl-auto mt-2">
-                                <a href="#" class="menu-button text-decoration-none text-black">
-                                    Buy
-                                </a>
                             </div>
                         </div>
                     </div>
@@ -589,10 +580,10 @@
             </div>
         </form>
         <form class="mb-3 p-3 form_email">
-            <div class="input-group mb-3">
+            <div class="input-group mb-3 ms-5">
                 <input type="email" class="form-control d-inline d-xl-none" placeholder="Email Address" aria-label="Введите Email" aria-describedby="button-addon2">
             </div>
-            <button class="btn btn_orange d-inline d-xl-none w-100" type="button">JOIN</button>
+            <button class="p-5 btn btn_orange d-inline d-xl-none w-100" type="button">JOIN</button>
         </form>
         <div class="pb-5">
             <div class="pt-1 text-center">By joining our newsletter you agree to</div>
