--- a/form.html
+++ b/form.html
@@ -14,55 +14,9 @@
     <div class="container mt-3 mt-xl-5">
         <div class="row">
             <div class="col-2 col-xl order-1">
-                <img src="images/logo.jpg" class="images mt-2">
+                <a href="index.html"><img src="images/logo.jpg" class="images mt-2"></a>
             </div>
-            <div class="col-12 col-xl-auto order-2 order-xl-1">
-                <div class="collapse d-xl-block" id="topMenu">
-                    <div class="row">
-                        <div class="col-12 col-xl-auto text-end">
-                            <div class="dropdown">
-                                <button class="btn dropdown-toggle menu-button" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                    Homepage
-                                </button>
-                                <ul class="dropdown-menu">
-                                    <li><a class="dropdown-item" href="#">Action</a></li>
-                                    <li><a class="dropdown-item" href="#">Another action</a></li>
-                                    <li><a class="dropdown-item" href="#">Something else here</a></li>
-                                </ul>
-                            </div>
-                        </div>
-                        <div class="col-12 col-xl-auto text-end">
-                            <div class="dropdown">
-                                <button class="btn dropdown-toggle menu-button" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                    Recipe Page
-                                </button>
-                                <ul class="dropdown-menu">
-                                    <li><a class="dropdown-item" href="#">Action</a></li>
-                                    <li><a class="dropdown-item" href="#">Another action</a></li>
-                                    <li><a class="dropdown-item" href="#">Something else here</a></li>
-                                </ul>
-                            </div>
-                        </div>
-                        <div class="col-12 col-xl-auto text-end">
-                            <div class="dropdown">
-                                <button class="btn dropdown-toggle menu-button" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                    Pages
-                                </button>
-                                <ul class="dropdown-menu">
-                                    <li><a class="dropdown-item" href="#">Action</a></li>
-                                    <li><a class="dropdown-item" href="#">Another action</a></li>
-                                    <li><a class="dropdown-item" href="#">Something else here</a></li>
-                                </ul>
-                            </div>
-                        </div>
-                        <div class="col-12 col-xl-auto text-end mt-2">
-                            <a href="#" class="menu-button text-decoration-none text-black">
-                                Buy
-                            </a>
-                        </div>
-                    </div>
-                </div>
-            </div>
+        </a>
             <div class="col order-1">
                 <div class="row justify-content-end">
                     <div class="col-auto mt-1 d-inline">
