--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="container mt-3 mt-xl-5">
         <div class="row">
             <div class="col-2 col-xl order-1">
-                <img src="images/logo.jpg" class="images mt-2">
+                <a href="index.html"><img src="images/logo.jpg" class="images mt-2"></a>
             </div>
             <div class="col-12 col-xl-auto order-2 order-xl-1">
                 <div class="collapse d-xl-block" id="topMenu">
@@ -25,9 +25,9 @@
                                     Homepage
                                 </button>
                                 <ul class="dropdown-menu">
-                                    <li><a class="dropdown-item" href="#">Action</a></li>
-                                    <li><a class="dropdown-item" href="#">Another action</a></li>
-                                    <li><a class="dropdown-item" href="#">Something else here</a></li>
+                                    <li><a class="dropdown-item" href="about.html">About</a></li>
+                                    <li><a class="dropdown-item" href="cookies.html">Cookies</a></li>
+                                    <li><a class="dropdown-item" href="recipe.html">Recipe</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -37,9 +37,9 @@
                                     Recipe Page
                                 </button>
                                 <ul class="dropdown-menu">
-                                    <li><a class="dropdown-item" href="#">Action</a></li>
-                                    <li><a class="dropdown-item" href="#">Another action</a></li>
-                                    <li><a class="dropdown-item" href="#">Something else here</a></li>
+                                    <li><a class="dropdown-item" href="about.html">About</a></li>
+                                    <li><a class="dropdown-item" href="cookies.html">Cookies</a></li>
+                                    <li><a class="dropdown-item" href="recipe.html">Recipe</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -49,9 +49,9 @@
                                     Pages
                                 </button>
                                 <ul class="dropdown-menu">
-                                    <li><a class="dropdown-item" href="#">Action</a></li>
-                                    <li><a class="dropdown-item" href="#">Another action</a></li>
-                                    <li><a class="dropdown-item" href="#">Something else here</a></li>
+                                    <li><a class="dropdown-item" href="about.html">About</a></li>
+                                    <li><a class="dropdown-item" href="cookies.html">Cookies</a></li>
+                                    <li><a class="dropdown-item" href="recipe.html">Recipe</a></li>
                                 </ul>
                             </div>
                         </div>
